--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </div>
 
   <div class="video" id="video">
-    <iframe width="300" height="169" src="https://www.youtube.com/watch?v=HKHQax_aQw8"
+    <iframe width="300" height="169" src="https://www.youtube.com/embed/HKHQax_aQw8?autoplay=1"
       title="Surpresa" frameborder="0"
       allow="autoplay; encrypted-media" allowfullscreen>
     </iframe>
